--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,1 +1,25 @@
+/* Main content wrapper for split-pane */
+.ion-page {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+/* ion-tabs fills the main content area */
+ion-tabs {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+ion-router-outlet {
+	flex: 1 1 auto;
+	display: block;
+}
+
+/* When split-pane is active (desktop), hide the bottom tab bar */
+:host-context(ion-split-pane.split-pane-visible) ion-tab-bar[slot="bottom"] {
+	display: none !important;
+}
+
 
