--- a/src/global.scss
+++ b/src/global.scss
@@ -42,3 +42,14 @@
 		display: none !important;
 	}
 }
+
+/* Ensure all routed components behave as ion-page elements */
+ion-router-outlet > * {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+	flex-direction: column;
+}
