updated mock photo links

--- a/src/app/features/properties/components/property-card/property-card.component.html
+++ b/src/app/features/properties/components/property-card/property-card.component.html
@@ -2,7 +2,7 @@
   <!-- Property Image -->
   <div class="property-image-container">
     <img 
-      [src]="property.photos?.[0] || 'https://via.placeholder.com/400x300/E0E0E0/999999?text=No+Image'" 
+      [src]="property.photos?.[0] || 'https://picsum.photos/400/300?grayscale'" 
       [alt]="property.name"
       class="property-image"
     />
